--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jubraj Dev",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
